--- a/src/app/modules/admin/containers/variables/variables.component.scss
+++ b/src/app/modules/admin/containers/variables/variables.component.scss
@@ -85,16 +85,29 @@ p {
         border-collapse: separate;
         border-spacing: 0px 8px;
         .list-variables__row--click {
-          transition: all 0.1s ease-in;
+          transition: all 0.1s linear;
           cursor: pointer;
           &:hover {
-            background-color: #ececec;
+            // background-color: #ececec;
+            background-color: $color-bg-hover-primary;
+
+            .list-variables__cell {
+              color: #ffffff;
+            }
+            .list-variables__cell--quantity {
+              color: #ffffff;
+            }
+            .list-variables__cell--action {
+              path {
+                fill: white;
+              }
+            }
           }
         }
         .list-variables__row {
           box-shadow: 0 2px 2px #00000040;
-          height: 48px;
-          margin-bottom: 8px;
+          height: 56px;
+          padding-top: 8px;
           padding-left: 1.5em;
           display: flex;
           justify-content: space-between;
@@ -110,7 +123,7 @@ p {
             }
           }
           .list-variables__header--quantity {
-            padding-right: 57px;
+            padding-right: 86px;
           }
           .list-variables__cell {
             min-width: 300px;
@@ -118,6 +131,7 @@ p {
             font-size: 1em;
             line-height: 1.1875em;
             color: #000000;
+            transition: all 0.1s linear;
             &:first-of-type {
               padding-left: 1.5em;
             }
@@ -130,12 +144,15 @@ p {
             height: 50px;
             display: flex;
             align-items: center;
+            transition: all 0.1s linear;
+            padding-right: 30px;
           }
           .list-variables__cell--action {
             padding-right: 20px;
             min-width: 300px;
             display: flex;
             justify-content: flex-end;
+            transition: all 0.1s linear;
           }
         }
       }
