--- a/src/app/modules/admin/containers/create-comparative-reports/create-comparative-reports.component.html
+++ b/src/app/modules/admin/containers/create-comparative-reports/create-comparative-reports.component.html
@@ -1,1 +1,71 @@
-<p>create-comparative-reports works!</p>
+<section class="createReport">
+  <div class="createReport__container">
+    <h1 class="createReport__title">Crear informe comparativo</h1>
+    <div class="selects">
+      <h3 class="selects__title">Centro La Balsa</h3>
+      <div class="selects__container">
+        <div class="selects__container-reports">
+          <div class="select-item">
+            <p class="select-item__title">Reporte 1</p>
+            <label class="select-item__label" for=""
+              >Selecciona un reporte</label
+            >
+            <mat-select
+              class="select-item__input"
+              placeholder="Reportes"
+              [(value)]="report1"
+              name="report1"
+              (selectionChange)="getReport1($event.value)"
+            >
+              <mat-option *ngFor="let item of reportsList" [value]="item">{{
+                item.name
+              }}</mat-option>
+            </mat-select>
+          </div>
+          <div class="select-item">
+            <p class="select-item__title">Reporte 2</p>
+            <label class="select-item__label" for=""
+              >Selecciona un reporte</label
+            >
+            <mat-select
+              class="select-item__input"
+              placeholder="Reportes"
+              [(value)]="report2"
+              name="report1"
+              (selectionChange)="getReport2($event.value)"
+            >
+              <mat-option *ngFor="let item of reportsList" [value]="item">{{
+                item.name
+              }}</mat-option>
+            </mat-select>
+          </div>
+        </div>
+        <div class="select-item select-item--variables">
+          <label class="select-item__label" for=""
+            >Selecciona las variables que quieras</label
+          >
+          <mat-select
+            #mySelCategory
+            class="select-item__input"
+            placeholder="Reportes"
+            multiple=""
+            [(value)]="report1"
+            name="report1"
+            (selectionChange)="getReport1($event.value)"
+          >
+            <mat-option
+              [value]="0"
+              (click)="selectAll()"
+              ngClass="'mat-pseudo-checkbox-checked':flag == true  "
+              >Seleccionar todas</mat-option
+            >
+            <mat-option *ngFor="let item of variablesList" [value]="item">{{
+              item.name
+            }}</mat-option>
+          </mat-select>
+        </div>
+      </div>
+    </div>
+    <button class="createReport__btn">Siguiente</button>
+  </div>
+</section>
