--- a/src/app/modules/auth/containers/login/login.component.scss
+++ b/src/app/modules/auth/containers/login/login.component.scss
@@ -72,17 +72,23 @@
   display: flex;
   align-items: center;
   margin: 1.5625rem 0 3rem 0;
-  padding-left: 60px;
+  padding-left: 50px;
 }
 .login__input-ico-eye {
-  width: 60px;
-  padding: 0 15px;
+  box-sizing: content-box;
+  width: 30px;
+  padding: 10px 10px;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
   &:hover {
     path {
-      fill: #1967d2;
+      stroke: #1966d2dc;
     }
+  }
+}
+.login__input-ico-eye--active {
+  path {
+    stroke: #1967d2;
   }
 }
 .login__recordar-usuario {
