--- a/src/app/modules/user/containers/pending-reports/pending-reports.component.scss
+++ b/src/app/modules/user/containers/pending-reports/pending-reports.component.scss
@@ -110,7 +110,7 @@
       display: flex;
       justify-content: space-evenly;
       align-items: center;
-      height: 48px;
+
       .report__item {
         list-style: none;
         margin: 0 32px;
@@ -125,6 +125,7 @@
       border-radius: 35px;
       font-size: 22px;
       color: #000000;
+      flex-shrink: 0;
     }
     .mat-button-disabled {
       background-color: #d8d8d8;
